Thu Nov  5 11:31:23 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (CreateChild): allocate temporary buffer and use it
	  instead of directly modify the passed string.  [ruby-dev:39635]

Sat Oct 31 17:20:58 2009  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* lib/net/http.rb (Net::HTTPResponse#each_response_header):
	  cosmetic: '?\ ' -> '?\s'

Fri Oct 30 22:02:15 2009  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* lib/net/http.rb (Net::HTTPResponse#each_response_header):
	  accept multiline message header of HTTP response.  see #1796.
	  cf. RFC 2616 '4.2 Message Header'.

	* test/net/http/test_httpresponse.rb: added.

Tue Oct 27 22:05:46 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_inspect): get rid of adding garbage to shor
	  UTF-8 string.  [ruby-dev:39550]

Tue Oct 27 21:20:35 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk/variable.rb: add TkVariable#+@ and -@ method.

Tue Oct 27 08:56:11 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* mkconfig.rb: reverted r25443 because build_os is used in mkmf.rb
	  on some platforms.  [ruby-core:26332]

Tue Oct 27 07:38:39 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/tcltklib.c,stubs.c: remove errors or warnings when compiled
	  with old ruby 1.8.x.

	* ext/tk/tkutil/tkutil.c: ditto.

Mon Oct 26 13:24:17 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/remote-tk.rb: typo fixed.

Mon Oct 26 12:06:27 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (io_fwrite): adjust stdio file position after direct write on
	  BSDish platforms.   [ruby-core:26300]

Sun Oct 25 20:04:35 2009  Akinori MUSHA  <knu@iDaemons.org>

	* object.c (rb_class_initialize): The inherited hook should be run
	  immediately after a new subclass is created, which is before
	  evaluating a given block. [Backport #621]

Sun Oct 25 20:02:46 2009  Akinori MUSHA  <knu@iDaemons.org>

	* configure.in: Fix syntax error.  when() is not defined in this
	  branch.
